# webtrees-docker

./: .dockerignore  .env.dist  .env.prod-test.dist  .gitignore  .jscpd.json  .mcp.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile-7.4-fpm  Dockerfile-7.4-fpm-alpine  Dockerfile-8.0-fpm  Dockerfile-8.0-fpm-alpine  Dockerfile-8.1-fpm  Dockerfile-8.1-fpm-alpine  Dockerfile-8.2-fpm  Dockerfile-8.2-fpm-alpine  Dockerfile-8.3-fpm  Dockerfile-8.3-fpm-alpine  LICENSE  Makefile  README.md  compose.development.yaml  compose.external-db.yaml  compose.external.yaml  compose.modules.yaml  compose.pma.yaml  compose.publish.yaml  compose.traefik.yaml  compose.yaml  docker-compose.development.yaml  docker-compose.local.yaml  docker-compose.traefik.yaml  docker-compose.yaml  install  switch  upgrade
.github/workflows/: build.yml  check-alpine.yml  check-mariadb.yml  check-nginx.yml  check-php.yml  check-versions.yml  ci-test.yml  cron-docker-hub-poll.yml  security.yml  test-copilot-handoff.yml
Dockerfiles/: Dockerfile
Dockerfiles/buildbox/: Dockerfile
Dockerfiles/php/: Dockerfile  Dockerfile-8.4-fpm
Make/: Makefile.app  Makefile.env  application.mk  build.mk  ci.mk  docker.mk  help.txt  helpers.mk  images.mk  maintenance.mk  modes.mk  test.mk  tools.mk
Make/helper/: colors.mk  help.mk
dev/: README.md  installer-version.json  nginx-version.json  php-versions.json  versions.json
docs/: byod.md  customizing.md  developing.md  diy.md  env-vars.md  https-certs.md  installer-reference.md  maintenance.md  portainer.md  proxy-traefik.md  upgrade.md
installer/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
installer/tests/: test__alpine.py  test__banner.py  test__byod_invariants.py  test__cli_resolve.py  test__db_probe.py  test__docker.py  test__io.py  test__progress.py  test__term.py  test_admin_password_secret.py  test_bump_make_guard.py  test_bump_mariadb.py  test_bump_nginx.py  test_byod_bind_paths.py  test_byod_reuse_volumes.py  test_cli.py  test_db_type_compatibility.py  test_demo.py  test_dev_flow.py  test_flow.py  test_gedcom.py  test_legacy_image_refs.py  test_mariadb_pin_lockstep.py  test_nginx_tag_lockstep.py  test_ports.py  test_prereq.py  test_prompts.py  test_render.py  test_rewrite_readme_badges.py  test_secrets.py  test_stack.py  test_validate_external_db_inputs.py  test_versions.py  test_volume_scan.py
installer/webtrees_installer/: __init__.py  __main__.py  _alpine.py  _banner.py  _byod_invariants.py  _cli_resolve.py  _db_probe.py  _docker.py  _io.py  _progress.py  _term.py  cli.py  demo.py  dev_flow.py  flow.py  gedcom.py  ports.py  prereq.py  prompts.py  render.py  secrets.py  stack.py  versions.py
installer/webtrees_installer/data/: __init__.py  given_names.json  surnames.json
installer/webtrees_installer/templates/: Makefile.j2  _compose_macros.j2  compose.standalone.j2  compose.traefik.j2  env.dev.j2  env.j2
php/conf.d/: opcache.ini
rootfs/: docker-entrypoint.sh
rootfs/docker-entrypoint.d/: 35-trust-proxy-extra.sh
rootfs/opt/: entrypoint.sh  root-entrypoint.sh  user-entrypoint.sh
rootfs/root/: environment
scripts/: apply-config  apply-config.sh  bump-mariadb.sh  bump-nginx.py  bump-nginx.sh  cache-clear.sh  check-alpine-pin.sh  check-php-versions.sh  check-port-defaults.sh  check-readme-badges.sh  composer-install  composer-install.sh  composer-update  configuration  install-application  install-application.sh  parse-alpine-pin.sh  parse-port-defaults.sh  probe-php-digests.sh  render-portainer-templates.sh  rewrite-readme-badges.py  set-permissions  set-permissions.sh  setup  setup.sh  update-application.sh  update-languages.sh
scripts/bump/: _bump-runner.sh  bump-mariadb.py  bump-mariadb.sh  bump-nginx.sh
scripts/lib/: auto-bump-lib.sh  images.env  lockstep.sh  php-versions-lib.sh  pull-or-fail.sh  render-make-help.sh
scripts/lockstep/: check-alpine-pin.sh  check-cache-ignore-error.sh  check-ci-images.sh  check-composer-patches-lockstep.sh  check-cron-poll-caller-perms.sh  check-diy-env-vars.sh  check-dockerfile-arg-defaults.sh  check-env-dist-pins.sh  check-healthcheck-start-period.sh  (+13 more)
setup/: README.md  composer-core-2.1.json  composer-core-2.2.json  composer-core.json  composer-full-2.1.json  composer-full-2.2.json  composer-full.json  composer.json
templates/: README.md
tests/: test-entrypoint.sh  test-host-lan-ip-detect.sh  test-launchers.sh  test-lockstep.sh  test-nginx-config.sh  test-shared-scripts.sh  test-trust-proxy-extra.sh
(+36 files in other folders)
