[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "webtrees-installer"
version = "1.0.0"
description = "Out-of-the-box installer wizard for self-hosted webtrees"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
# LICENSE is a deliberate copy of the repo-root LICENSE. setuptools'
# license-files glob only resolves paths inside the project root, and
# Docker COPY refuses to follow a symlink that points outside the
# build context, so the duplicate file is currently the cheapest
# workaround. Keep both in sync; the root file is canonical.
license-files = ["LICENSE"]
authors = [
    { name = "Rico Sonntag", email = "mail@ricosonntag.de" },
]
dependencies = [
    "Jinja2>=3.1,<4",
]

[project.urls]
Homepage = "https://github.com/magicsunday/webtrees-docker"
Source = "https://github.com/magicsunday/webtrees-docker"
Issues = "https://github.com/magicsunday/webtrees-docker/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "PyYAML>=6.0",
]
static = [
    "ruff>=0.5",
    "mypy>=1.10",
    "vulture>=2.11",
    "pylint>=3.0",
]

[project.scripts]
webtrees-installer = "webtrees_installer.cli:main"

[tool.setuptools.packages.find]
include = ["webtrees_installer*"]

[tool.setuptools.package-data]
webtrees_installer = ["templates/*.j2", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

# Jinja2 ships partial inline annotations but no PEP 561 marker, so its
# imports cannot be resolved by strict mypy. Scoping the ignore to the
# `jinja2.*` namespace keeps the global posture strict — any future
# third-party dep without stubs surfaces as a fresh mypy error instead
# of being silently swallowed.
[[tool.mypy.overrides]]
module = "jinja2.*"
ignore_missing_imports = true

[tool.pylint."messages control"]
disable = ["all"]
enable = ["duplicate-code"]

[tool.pylint.similarities]
# 20 lines is small enough to surface real duplication (e.g. two
# near-identical helpers) but high enough to ignore boilerplate
# (imports, dataclass field repetition).
min-similarity-lines = 20
